# TokenDanceCode

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.en.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  vitest.config.ts
.github/workflows/: ci.yml
crates/tokendance-cli/: Cargo.toml
crates/tokendance-cli/src/: main.rs
crates/tokendance-core/: Cargo.toml
crates/tokendance-core/src/: compact.rs  config.rs  context.rs  hooks.rs  lib.rs  mcp.rs  memory.rs  permissions.rs  provider.rs  runtime.rs  sandbox.rs  streaming.rs  subagent.rs  transcript.rs  types.rs  worktree.rs
crates/tokendance-core/src/providers/: anthropic.rs  mod.rs  openai_chat.rs  openai_responses.rs
crates/tokendance-core/src/tools/: mod.rs
crates/tokendance-sdk/: Cargo.toml
crates/tokendance-sdk/src/: lib.rs
docs/: TS重构路线图.md  agenthub-sdk.md  release-readiness.md  rust-release-checklist.md  rust-rewrite-architecture.md  rust-rewrite-handoff.md  rust-rewrite-status.md  rust-tool-reference.md  交接文档.md  产品功能需求文档.md  并行执行状态.md  并行推进计划.md  开发流程文档.md  架构对标评估.md  架构设计文档.md  端到端验收清单.md
scripts/: check-registry-next.mjs  check-release-contract.mjs  check-release-publish-readiness.mjs  check-rust-release-plan.mjs  smoke-providers.mjs  smoke-real-gateway.mjs  smoke-rust-release.mjs  smoke-rust-wrapper-tarball.mjs  smoke-tarball-install.mjs  verify-wave4-worktrees.mjs  verify-wave5-worktrees.mjs  verify-wave7-worktrees.mjs
src/tokendance/agents/: __init__.py  base.py  manager.py  reviewer.py  worker.py
src/tokendance/cli/: commands.py  main.py  renderer.py  shell.py
src/tokendance/config/: __init__.py  loader.py  models.py  secrets.py
src/tokendance/context/: __init__.py  builder.py  compact.py  memory.py  resume.py  transcript_search.py
src/tokendance/core/: __init__.py  context_builder.py  events.py  interrupts.py  recovery.py  runtime.py  session.py  turn.py
src/tokendance/execution/: __init__.py  base.py  local.py  result.py  venv.py
src/tokendance/git/: __init__.py  quality.py  revert.py  review.py  service.py  worktree.py
src/tokendance/models/: __init__.py  anthropic_provider.py  base.py  errors.py  mock.py  openai_provider.py  types.py
src/tokendance/permissions/: __init__.py  engine.py  modes.py  powershell.py
src/tokendance/storage/: __init__.py  atomic.py  jsonl.py  paths.py  transcript.py
src/tokendance/tasks/: __init__.py  models.py  store.py  todo.py
src/tokendance/tools/: __init__.py  file.py  orchestrator.py  patch.py  registry.py  shell.py  spec.py  subagent.py  task.py  todo.py
tests/integration/: test_mock_agent_loop.py  test_resume.py
tests/integration/models/: test_real_providers.py
tests/unit/: test_imports.py
tests/unit/agents/: test_manager.py
tests/unit/cli/: test_commands.py  test_main.py  test_renderer.py  test_shell.py
tests/unit/config/: test_loader.py  test_secrets.py
tests/unit/context/: test_builder.py  test_compact.py  test_memory.py  test_transcript_search.py
tests/unit/core/: test_context_builder.py  test_events.py  test_interrupts.py  test_recovery.py  test_runtime_registry.py  test_session.py  test_turn_runner.py
tests/unit/execution/: test_local.py  test_result.py  test_venv.py
tests/unit/git/: test_review_revert_quality.py  test_service.py  test_worktree.py
tests/unit/models/: test_mock.py  test_provider_mapping.py  test_types.py
tests/unit/permissions/: test_engine.py  test_modes.py  test_powershell.py
tests/unit/storage/: test_atomic.py  test_jsonl.py  test_paths.py  test_transcript.py
tests/unit/tasks/: test_task_store.py  test_todo_store.py
tests/unit/tools/: test_file_tools.py  test_orchestrator.py  test_patch.py  test_registry.py  test_shell.py  test_subagent.py  test_task_todo.py
