[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tokendance"
version = "0.1.0"
description = "A local command-line coding agent for personal development workflows."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Tokendance Contributors" }
]
dependencies = [
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
tokendance = "tokendance.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
