[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tokendance"
version = "0.1.0"
description = "TokenDance Lab 自研的 Harness 工程 Agent"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Tokendance Contributors" }
]
dependencies = [
  "anthropic>=0.105",
  "openai>=2.36",
  "typer>=0.12",
  "rich>=13.7",
  "prompt-toolkit>=3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
tokendance = "tokendance.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
