[package]
name = "tokendance-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "tokendance"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokendance-core = { path = "../tokendance-core" }
